tests/ui/privacy/useless-pub.stderr
error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/useless-pub.rs:8:5
   |
LL |     pub fn foo(&self) {}
   |     ^^^
   |
   = note: trait items always share the visibility of their trait
help: remove the qualifier
   |
LL -     pub fn foo(&self) {}
LL +      fn foo(&self) {}
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/useless-pub.rs:12:10
   |
LL |     V1 { pub f: i32 },
   |          ^^^
   |
   = note: enum variants and their fields always share the visibility of the enum they are in
help: remove the qualifier
   |
LL -     V1 { pub f: i32 },
LL +     V1 {  f: i32 },
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/useless-pub.rs:13:8
   |
LL |     V2(pub i32),
   |        ^^^
   |
   = note: enum variants and their fields always share the visibility of the enum they are in
help: remove the qualifier
   |
LL -     V2(pub i32),
LL +     V2( i32),
   |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0449`.
